--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@ body {
   margin: 0;
 }
 
+.container {
+  max-width: 900px;
+  margin: 1rem 2rem;
+}
+
 .card-grid {
   display: grid;
   align-items: center;
